# Meeting-Intelligence

./: .editorconfig  .gitignore  .prettierignore  .vercelignore  CLAUDE.md  README.md  TODO.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
.github/workflows/: backend-deploy.yml  ci.yml  desktop-release.yml
apps/desktop/: .env.example  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
apps/desktop/scripts/: parse-latency-log.mjs  rust-coverage.sh
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: sckit_spike.rs
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  recording.rs
apps/desktop/src-tauri/src/audio/: cpal_mic.rs  encoder.rs  mixer.rs  mod.rs  pipeline.rs  resampler.rs  traits.rs  vad.rs
apps/desktop/src-tauri/src/audio/macos/: mic.rs  mod.rs  permissions.rs  system.rs
apps/desktop/src-tauri/src/audio/windows/: mod.rs  permissions.rs  system.rs
apps/desktop/src-tauri/src/auth/: loopback.rs  mod.rs  storage.rs
apps/desktop/src-tauri/src/detection/: apps.rs  mod.rs  monitor.rs  traits.rs
apps/desktop/src-tauri/src/detection/macos/: mod.rs  source.rs
apps/desktop/src-tauri/src/detection/windows/: mod.rs  source.rs
apps/desktop/src/components/: app-shell.tsx  audio-player.tsx  connection-status.tsx  history-filters.tsx  history-view.test.tsx  history-view.tsx  keyboard-shortcuts-dialog.test.tsx  keyboard-shortcuts-dialog.tsx  login-view.tsx  meeting-audio-player.tsx  meeting-detail-view.test.tsx  meeting-detail-view.tsx  meeting-detection-prompt.tsx  meeting-row.tsx  meeting-summary.test.tsx  meeting-summary.tsx  mic-level-meter.test.tsx  mic-level-meter.tsx  participants-section.tsx  permission-prompt.tsx  recent-meetings.tsx  reconnect-banner.tsx  record-control.tsx  search-input.test.tsx  search-input.tsx  search-results.test.tsx  search-results.tsx  session-ended-view.tsx  settings-sheet.tsx  theme-provider.test.tsx  theme-provider.tsx  transcript-panel.tsx  update-banner.test.tsx  update-banner.tsx
apps/desktop/src/hooks/: use-create-meeting.ts  use-delete-meeting-audio.ts  use-keyboard-shortcuts.test.tsx  use-keyboard-shortcuts.ts  use-meeting-audio.ts  use-meeting-detail.ts  use-meeting-detection.ts  use-meetings-list.test.ts  use-meetings-list.ts  use-patch-action-item.ts  use-recording.ts  use-search.ts  use-update-checker.ts  (+4 more)
apps/web/: .env.example  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/brand-src/: README.md  process-logos.mjs
apps/web/components/: animated-headline.tsx  app-preview.tsx  download-button.tsx  features.tsx  hero.tsx  scroll-preview.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
apps/web/lib/: releases.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_phase2_foundation.py  0002_tags_and_upsert.py  0003_user_lookup.py  0004_audio_object_key.py  0005_phase3_summaries.py  0006_phase4_search.py  0007_speaker_aliases.py  0008_dead_letter_tasks.py
backend/scripts/: replay_audio.py
backend/src/meeting_intelligence/: __init__.py  cli.py  config.py  main.py
backend/src/meeting_intelligence/api/: auth.py  deps.py  meetings.py  search.py  storage.py  transcript.py  updates.py
backend/src/meeting_intelligence/auth/: __init__.py  deps.py  workos_provider.py
backend/src/meeting_intelligence/db/: __init__.py  base.py  engine.py  rls.py  rls_check.py  session.py
backend/src/meeting_intelligence/db/models/: __init__.py  action_item.py  dead_letter_task.py  meeting.py  meeting_summary.py  speaker_alias.py  transcript_segment.py  user.py
backend/src/meeting_intelligence/embedding/: __init__.py  fake.py  openai.py
backend/src/meeting_intelligence/interfaces/: __init__.py  auth.py  embedding.py  llm.py  releases.py  storage.py  stt.py
backend/src/meeting_intelligence/llm/: __init__.py  anthropic_claude.py  in_memory_fake.py
backend/src/meeting_intelligence/releases/: __init__.py  fake.py  github.py
backend/src/meeting_intelligence/storage/: __init__.py  local_disk.py  s3.py
backend/src/meeting_intelligence/stt/: deepgram_nova.py  in_memory_echo.py
backend/src/meeting_intelligence/summary/: __init__.py  graph.py  prompts.py  runner.py  schemas.py
backend/src/meeting_intelligence/worker/: __init__.py  celery_app.py  dead_letter.py
backend/src/meeting_intelligence/worker/tasks/: __init__.py  audio_archive.py  embed.py  summarise.py
backend/tests/: conftest.py  test_action_items_routes.py  test_audio_archive_task.py  test_auth_deps.py  test_auth_routes_contract.py  test_auth_workos.py  test_dead_letter.py  test_deepgram_nova.py  test_deps.py  test_embed_task.py  test_embedding_fake.py  test_health.py  test_llm_anthropic.py  test_llm_in_memory_fake.py  test_meeting_summary_routes.py  test_meetings_audio_routes.py  test_meetings_routes.py  test_migrations_apply.py  test_release_source_github.py  test_rls_blocks_cross_user.py  test_rls_bypass_check.py  test_search_routes.py  test_storage_local_disk.py  test_storage_s3.py  test_summarise_task.py  test_summary_graph.py  test_transcript_ws.py  test_transcript_ws_persistence.py  test_updates_routes.py
backend/tests/benchmarks/: conftest.py  test_meetings_list_latency.py  test_search_latency.py
backend/tests/e2e/: fixtures.py  test_real_anthropic.py  test_real_openai_embed.py
docs/: Meeting_Intelligence_Architecture.docx  Meeting_Intelligence_Development_Phases.docx  design-phase.md  design-system.md  e2e-deepgram-runbook.md  phase-6-meeting-detection.md  release-runbook.md  tech-stack.md
infra/: .env.example  README.md  docker-compose.yml  init-app-user.sh  init-app-user.sql
scripts/: make-dmg-background.mjs  make-fixture-wav.sh  make-tauri-icons.sh  release-desktop.sh
(+72 files in other folders)
