[project]
name = "meeting-intelligence-backend"
version = "0.0.0"
description = "Meeting Intelligence backend — FastAPI gateway, LangGraph orchestration, and Celery worker."
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "deepgram-sdk>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "psycopg[binary,pool]>=3.2.3,<3.3",
    "alembic>=1.14.0,<2",
    "pgvector>=0.3.6,<0.4",
    "workos>=5.0.0,<6",
    "pyjwt[crypto]>=2.9.0,<3",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-postgresql>=6.1.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_intelligence"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-postgresql>=6.1.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `Depends(...)` in argument defaults is canonical, not a B008 footgun.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["meeting_intelligence"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pytest_postgresql.*"
ignore_missing_imports = true
