[project]
name = "meeting-intelligence-backend"
version = "0.0.0"
description = "Meeting Intelligence backend — FastAPI gateway, LangGraph orchestration, and Celery worker."
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "deepgram-sdk>=4.0.0",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "psycopg[binary,pool]>=3.2.3,<3.3",
    "alembic>=1.14.0,<2",
    "pgvector>=0.3.6,<0.4",
    "workos>=5.0.0,<6",
    "pyjwt[crypto]>=2.9.0,<3",
    "httpx>=0.27.0",
    # US-11 audio archive: Celery worker + S3 client.
    "celery[redis]>=5.4.0,<6",
    "aioboto3>=13.0.0,<14",
    # Phase 3 LLM summarisation: Anthropic Claude SDK and LangGraph
    # orchestration. We deliberately do NOT add `langchain-anthropic` —
    # graph nodes call our `LLMProvider` ABC, never a vendor SDK directly.
    "anthropic>=0.40.0,<1",
    "langgraph>=0.2.50,<0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_intelligence"]

# PEP 735 dependency group — installed by default via `uv sync`. Replaces
# both [project.optional-dependencies].dev and [tool.uv].dev-dependencies
# (the latter was deprecated in uv 0.5+).
[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest-postgresql>=6.1.0,<7",
    # S3 mocking for storage + audio-archive task tests.
    "moto[s3]>=5.0.0,<6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
# `e2e` tests hit real external services (Anthropic API today; future
# real-Deepgram or real-S3 cases land here too). Default `pytest`
# excludes them so unit/integration runs stay fast and free; opt in
# with `pytest -m e2e`. The tests themselves auto-skip when the
# relevant API key env var is unset.
markers = [
    "e2e: real external-service tests; require API keys (skipped by default)",
]
addopts = "-m 'not e2e'"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # bugbear
    "UP",           # pyupgrade
    "RUF",          # ruff-specific
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's `Depends(...)` in argument defaults is canonical, not a B008 footgun.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["meeting_intelligence"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pytest_postgresql.*"
ignore_missing_imports = true

# Third-party libraries without inline type stubs. We don't write type-
# heavy code against any of them — the surface area we touch (Celery
# decorators, aioboto3 client builder, boto3 client) is dynamically
# typed by design — so the cost of true stubs would dwarf the benefit.
[[tool.mypy.overrides]]
module = ["aioboto3", "boto3", "botocore.*", "celery", "celery.*"]
ignore_missing_imports = true
