[package]
name = "meeting-intelligence-desktop"
version = "0.0.0"
description = "Meeting Intelligence desktop shell"
authors = ["Meeting Intelligence"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "meeting_intelligence_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
# Phase 3 / US-19 export: native save dialog + filesystem write so the
# transcript-export download actually lands on disk. The blob+anchor
# `<a download>` web trick is silently no-op in Tauri's webview, so the
# desktop has to go through the IPC plugins for this.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# Cross-platform OS credential store wrapper. Picks up Keychain on macOS
# and the Credential Manager on Windows (FFI under the hood — no file IO,
# so no fs capability needed). The `apple-native` and `windows-native`
# features bind directly to the OS API rather than the secret-service
# fallback, matching FR-2.02's "OS credential store" requirement.
keyring = { version = "3", features = ["apple-native", "windows-native"] }
# HTTP client for the Phase-2 auth flow (POST /auth/callback, /refresh,
# /logout). `rustls-tls` keeps us off OpenSSL on macOS so the bundle
# doesn't need a system OpenSSL pinned.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "rt", "net", "io-util", "time", "macros"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

# Cross-platform audio bits. cpal is the cross-platform mic capture
# library — it sits on CoreAudio on macOS and WASAPI on Windows, so we
# share a single CpalMicSource between platforms.
rubato = "3"
audioadapter-buffers = "3"
webrtc-vad = "0.4"
base64 = "0.22"
cpal = "0.17"
# bytemuck is used by both platform system sources to cast raw audio
# byte slices to &[f32] without copying.
bytemuck = "1"
# sysinfo gives us cross-platform per-process CPU% + RSS for the
# `perf://stats` telemetry stream the perf-monitor thread emits during
# a recording. `system` is the only feature we want — disk/network
# probes pull a much larger dep graph and we don't use them.
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

# macOS-only audio capture deps: ScreenCaptureKit for system loopback,
# objc2/AVFoundation for the mic + screen permission flows.
[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "6", features = ["macos_13_0"] }
# Permission checks: AVCaptureDevice.authorizationStatusForMediaType /
# requestAccessForMediaType. block2 is needed for the request's
# completion-handler block. Foundation supplies NSString and the runtime.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSThread"] }
objc2-av-foundation = { version = "0.3", features = [
    "AVCaptureDevice",
    "AVMediaFormat",
] }
block2 = "0.6"

# Windows-only audio capture deps. cpal handles the mic via WASAPI; the
# `wasapi` crate is a thin wrapper around the Win32 audio API that lets
# us configure loopback capture (cpal does not expose AUDCLNT_STREAMFLAGS_LOOPBACK).
# The `windows` crate gives us the COM init the WASAPI thread needs.
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
# `windows` is brought in transitively by wasapi, but we depend on it
# directly so the COM HRESULT helpers are in scope where we need them.
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[[example]]
name = "sckit_spike"
path = "examples/sckit_spike.rs"
required-features = []
